--- a/pyproject.toml
+++ b/pyproject.toml
@@ -85,6 +85,8 @@ exclude_lines = [
 [tool.ruff]
 line-length = 100
 target-version = "py39"
+
+[tool.ruff.lint]
 select = [
     "E",   # pycodestyle errors
     "W",   # pycodestyle warnings
@@ -100,10 +102,10 @@ ignore = [
     "C901",  # too complex
 ]
 
-[tool.ruff.per-file-ignores]
+[tool.ruff.lint.per-file-ignores]
 "__init__.py" = ["F401"]  # unused imports
 
-[tool.ruff.isort]
+[tool.ruff.lint.isort]
 known-first-party = ["yaml_diffs"]
 
 [tool.mypy]
@@ -124,4 +126,3 @@ module = [
     "tests.*",
 ]
 disallow_untyped_defs = false
-
