Address PR review feedback
Applied the following changes based on code review:
- Switch test.yml to use uv instead of pip (comment #2554006988)
- Switch lint.yml to use uv instead of pip (comment #2554007051)
- Update deploy.yml to use direct git integration instead of bervProject action (comment #2554007248)
- Make health check timeout configurable with retry logic and curl timeout (comment #2554007492)
- Update check.sh to use set -o pipefail and capture output to temp file (comment #2554007857)
- Add comprehensive package installation tests in build.yml (comment #2554007990)

Resolves review comments: #2554006988, #2554007051, #2554007248, #2554007492, #2554007857, #2554007990

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -36,6 +36,8 @@ jobs:
         run: |
           pip install dist/yaml_diffs-*.whl
           python -c "import yaml_diffs; print('Package installed successfully')"
+          python -c "from yaml_diffs import __version__; print(f'Package version: {__version__}')"
+          python -c "import yaml_diffs; assert hasattr(yaml_diffs, '__version__'), 'Package missing __version__ attribute'"
 
       - name: Upload build artifacts
         uses: actions/upload-artifact@v4
