--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -15,14 +15,25 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v4
 
-      - name: Deploy to Railway
-        uses: bervProject/railway-deploy@v3.0.0
-        env:
-          RAILWAY_TOKEN: ${{ secrets.RAILWAY_TOKEN }}
-        with:
-          service: ${{ secrets.RAILWAY_SERVICE_ID }}
-
       - name: Verify deployment health check
+        env:
+          HEALTH_CHECK_URL: https://${{ secrets.RAILWAY_DOMAIN }}/health
+          HEALTH_CHECK_TIMEOUT: ${{ vars.HEALTH_CHECK_TIMEOUT || '30' }}
+          HEALTH_CHECK_RETRY_DELAY: ${{ vars.HEALTH_CHECK_RETRY_DELAY || '5' }}
         run: |
-          sleep 10
-          curl -f https://${{ secrets.RAILWAY_DOMAIN }}/health || exit 1
+          echo "Waiting for deployment to be ready..."
+          max_attempts=$((HEALTH_CHECK_TIMEOUT / HEALTH_CHECK_RETRY_DELAY))
+          attempt=0
+          while [ $attempt -lt $max_attempts ]; do
+            if curl --max-time 10 -f "$HEALTH_CHECK_URL" > /dev/null 2>&1; then
+              echo "✅ Health check passed!"
+              exit 0
+            fi
+            attempt=$((attempt + 1))
+            if [ $attempt -lt $max_attempts ]; then
+              echo "Attempt $attempt/$max_attempts failed, retrying in ${HEALTH_CHECK_RETRY_DELAY}s..."
+              sleep $HEALTH_CHECK_RETRY_DELAY
+            fi
+          done
+          echo "❌ Health check failed after $max_attempts attempts"
+          exit 1
