--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -19,25 +19,24 @@ jobs:
         uses: actions/setup-python@v5
         with:
           python-version: "3.11"
-          cache: "pip"
 
-      - name: Install linting tools
+      - name: Install uv
+        uses: astral-sh/setup-uv@v4
+        with:
+          version: "latest"
+
+      - name: Install dependencies
         run: |
-          python -m pip install --upgrade pip
-          pip install ruff mypy
+          uv pip install -e ".[dev]"
 
       - name: Run ruff check (linting)
         run: |
-          ruff check src/ tests/
+          uv run ruff check src/ tests/
 
       - name: Run ruff format check
         run: |
-          ruff format --check src/ tests/
-
-      - name: Install project dependencies
-        run: |
-          pip install -e ".[dev]"
+          uv run ruff format --check src/ tests/
 
       - name: Run mypy type checking
         run: |
-          mypy src/
+          uv run mypy src/
