--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -23,16 +23,19 @@ jobs:
         uses: actions/setup-python@v5
         with:
           python-version: ${{ matrix.python-version }}
-          cache: "pip"
+
+      - name: Install uv
+        uses: astral-sh/setup-uv@v4
+        with:
+          version: "latest"
 
       - name: Install dependencies
         run: |
-          python -m pip install --upgrade pip
-          pip install -e ".[dev]"
+          uv pip install -e ".[dev]"
 
       - name: Run tests with coverage
         run: |
-          pytest --cov=src/yaml_diffs --cov-report=xml --cov-report=term --cov-report=term-missing -v
+          uv run pytest --cov=src/yaml_diffs --cov-report=xml --cov-report=term --cov-report=term-missing -v
 
       - name: Upload coverage reports
         uses: codecov/codecov-action@v4
