--- a/src/yaml_diffs/schema/legal_document_spec.yaml
+++ b/src/yaml_diffs/schema/legal_document_spec.yaml
@@ -1,170 +1,108 @@
-# OpenSpec Schema Definition for Hebrew Legal Documents
-# Version: 1.0.0
-# Format: JSON Schema (Draft 2020-12) in YAML format
+# OpenSpec Schema Definition for Legal Documents
+# Language-agnostic contract for document structure
 #
-# This schema defines the structure for legal and regulatory documents
-# with recursive sections, supporting unlimited nesting depth.
+# Note: This schema uses OpenAPI 3.0.0 format to match the Pydantic models.
+# The schema defines the structure for Hebrew legal documents with recursive sections.
 
-version: "1.0.0"
-$schema: "https://json-schema.org/draft/2020-12/schema"
-$id: "https://github.com/noamoss/yaml_diffs/schema/legal_document_spec.yaml"
+openapi: 3.0.0
+info:
+  title: Legal Document Schema
+  version: 1.0.0
+  description: |
+    Schema for representing Hebrew legal and regulatory documents in a flexible,
+    nested YAML format. Supports unlimited nesting, stable UUIDs, and Hebrew text.
 
-title: "Legal Document Schema"
-description: |
-  Schema for representing Hebrew legal and regulatory documents in YAML format.
-  Supports recursive sections with unlimited nesting, flexible structural markers,
-  and stable IDs for change detection across versions.
+components:
+  schemas:
+    Section:
+      type: object
+      description: |
+        Represents a section in a legal document. Sections can be nested
+        recursively to unlimited depth. Each section must have a stable UUID
+        identifier for reliable diffing across versions.
+      required: []
+      properties:
+        id:
+          type: string
+          format: uuid
+          description: |
+            Unique identifier (UUID). Auto-generated if not provided.
+            Must be a valid UUID v4.
+        content:
+          type: string
+          default: ""
+          description: |
+            Text content for this section level only (not children).
+            Supports Hebrew text (UTF-8 encoding).
+        marker:
+          type: string
+          nullable: true
+          description: |
+            Optional structural marker (e.g., "א", "1", "a").
+            Supports Hebrew text (UTF-8 encoding).
+        title:
+          type: string
+          nullable: true
+          description: |
+            Optional section title. Supports Hebrew text (UTF-8 encoding).
+        sections:
+          type: array
+          items:
+            $ref: "#/components/schemas/Section"
+          default: []
+          description: |
+            Optional list of nested child sections. Supports unlimited nesting depth.
 
-type: object
-required:
-  - document
-
-properties:
-  document:
-    type: object
-    required:
-      - id
-      - title
-      - type
-      - language
-      - version
-      - source
-      - sections
-    properties:
-      id:
-        type: string
-        description: "Stable document identifier (recommended: UUID or canonical ID)"
-        minLength: 1
-        examples:
-          - "law-1234"
-          - "550e8400-e29b-41d4-a716-446655440000"
-
-      title:
-        type: string
-        description: "Document title in Hebrew"
-        minLength: 1
-
-      type:
-        type: string
-        description: "Type of legal document"
-        enum:
-          - law
-          - regulation
-          - directive
-          - circular
-          - policy
-          - other
-        examples:
-          - "law"
-          - "regulation"
-
-      language:
-        type: string
-        description: "Document language (must be 'hebrew')"
-        const: "hebrew"
-        default: "hebrew"
-
-      version:
-        type: object
-        required:
-          - number
-        properties:
-          number:
+    Document:
+      type: object
+      description: |
+        Represents a complete legal document. A document contains metadata
+        and a list of root sections. Sections can be nested recursively to
+        unlimited depth.
+      required:
+        - version
+      properties:
+        title:
+          type: string
+          nullable: true
+          description: |
+            Document name or title. Supports Hebrew text (UTF-8 encoding).
+        authors:
+          type: array
+          items:
             type: string
-            description: "Version identifier or date (e.g., '2024-11-01')"
-            minLength: 1
-            examples:
-              - "2024-11-01"
-              - "v1.0"
-          description:
-            type: string
-            description: "Optional version description"
-        additionalProperties: false
-
-      source:
-        type: object
-        required:
-          - url
-          - fetched_at
-        properties:
-          url:
-            type: string
-            description: "Original source URL"
-            format: uri
-            minLength: 1
-            examples:
-              - "https://example.gov.il/law1234"
-          fetched_at:
-            type: string
-            description: "ISO 8601 timestamp when document was fetched"
-            format: date-time
-            examples:
-              - "2025-01-20T09:50:00Z"
-        additionalProperties: false
-
-      sections:
-        type: array
-        description: "Recursive array of document sections"
-        items:
-          $ref: "#/$defs/Section"
-        minItems: 0
-
-    additionalProperties: false
-
-$defs:
-  Section:
-    type: object
-    description: |
-      Recursive section definition. Sections can contain nested sections
-      to unlimited depth. Each section must have a stable ID for diffing.
-    required:
-      - id
-      - sections
-    properties:
-      id:
-        type: string
-        description: "Stable section identifier (required for diffing)"
-        # Pattern supports alphanumeric characters, hyphens, and underscores.
-        # This allows for UUIDs (e.g., "550e8400-e29b-41d4-a716-446655440000")
-        # as well as custom identifiers (e.g., "sec-1", "sec-1-a").
-        pattern: "^[a-zA-Z0-9_-]+$"
-        minLength: 1
-        examples:
-          - "sec-1"
-          - "sec-1-a"
-          - "550e8400-e29b-41d4-a716-446655440000"
-
-      marker:
-        type: string
-        description: |
-          Optional structural marker (e.g., "1", "1.א", "(b)", "II", "א'")
-          Preserved verbatim for citation purposes.
-        examples:
-          - "1"
-          - "1.א"
-          - "(א)"
-          - "II"
-          - "פרק א'"
-
-      title:
-        type: string
-        description: "Optional section title in Hebrew"
-        examples:
-          - "הגדרות"
-          - "תחולה"
-
-      content:
-        type: string
-        description: |
-          Text content of this section only (excluding subsections).
-          Defaults to empty string if not provided.
-        default: ""
-
-      sections:
-        type: array
-        description: "Recursive array of nested sections"
-        items:
-          $ref: "#/$defs/Section"
-        minItems: 0
-
-    additionalProperties: false
+          nullable: true
+          description: |
+            List of authors, entities, or organizations. Each author is a string.
+            Supports Hebrew text (UTF-8 encoding).
+        version:
+          type: string
+          description: |
+            Document version identifier (e.g., "1.0", "2024-01-15").
+            This is separate from published_date and updated_date.
+        source:
+          type: string
+          nullable: true
+          description: |
+            Optional source identifier or URL for the document.
+        published_date:
+          type: string
+          format: date-time
+          nullable: true
+          description: |
+            Publication date in ISO 8601 format (YYYY-MM-DD or YYYY-MM-DDTHH:MM:SS).
+            Example: "2024-01-15" or "2024-01-15T10:30:00Z"
+        updated_date:
+          type: string
+          format: date-time
+          nullable: true
+          description: |
+            Last update date in ISO 8601 format (YYYY-MM-DD or YYYY-MM-DDTHH:MM:SS).
+            Example: "2024-01-15" or "2024-01-15T10:30:00Z"
+        sections:
+          type: array
+          items:
+            $ref: "#/components/schemas/Section"
+          default: []
+          description: |
+            List of root-level sections in the document.
