--- a/pyproject.toml
+++ b/pyproject.toml
@@ -26,6 +26,7 @@ classifiers = [
 ]
 
 dependencies = [
+    "click>=8.0.0",
     "pydantic>=2.0.0",
     "pyyaml>=6.0",
     "fastapi>=0.100.0",
@@ -50,6 +51,9 @@ package-dir = {"" = "src"}
 
 [tool.setuptools.packages.find]
 where = ["src"]
+
+[project.scripts]
+yaml-diffs = "yaml_diffs.cli.main:main"
 
 [tool.pytest.ini_options]
 testpaths = ["tests"]
