--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -28,7 +28,7 @@ jobs:
       - name: Cache dependencies
         uses: actions/cache@v4
         with:
-          path: ${{ runner.home }}/.cache/uv
+          path: ${{ env.HOME }}/.cache/uv
           key: ${{ runner.os }}-python-3.11-uv-${{ hashFiles('uv.lock') }}
           restore-keys: |
             ${{ runner.os }}-python-3.11-uv-
