--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -32,7 +32,7 @@ jobs:
       - name: Cache dependencies
         uses: actions/cache@v4
         with:
-          path: ${{ runner.home }}/.cache/uv
+          path: ${{ env.HOME }}/.cache/uv
           key: ${{ runner.os }}-python-${{ matrix.python-version }}-uv-${{ hashFiles('uv.lock') }}
           restore-keys: |
             ${{ runner.os }}-python-${{ matrix.python-version }}-uv-
