--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -25,6 +25,14 @@ jobs:
         with:
           version: "latest"
 
+      - name: Cache dependencies
+        uses: actions/cache@v4
+        with:
+          path: ${{ env.HOME }}/.cache/uv
+          key: ${{ runner.os }}-python-3.11-uv-${{ hashFiles('uv.lock') }}
+          restore-keys: |
+            ${{ runner.os }}-python-3.11-uv-
+
       - name: Install dependencies
         run: |
           uv pip install --system -e ".[dev]"
