feat(mcp): Add MCP server & tools for API endpoints (fixes #37)
- Implement MCP server with three tools: validate_document, diff_documents, health_check
- Add configuration management with environment variable support
- Add HTTP client for API communication with optional authentication
- Add comprehensive test suite (34 tests, 78% coverage)
- Add CLI command: yaml-diffs mcp-server
- Add documentation and example client configuration
- Update Python requirement to >=3.10 for MCP SDK compatibility
- Fix timeout configuration bug (handle timeout=0 correctly)

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,7 +7,7 @@ name = "yaml-diffs"
 version = "0.1.0"
 description = "Python service for representing Hebrew legal and regulatory documents in a flexible, nested YAML format"
 readme = "README.md"
-requires-python = ">=3.9"
+requires-python = ">=3.10"
 license = {text = "MIT"}
 authors = [
     {name = "Noam Oss", email = "noam@thepitz.studio"}
@@ -18,9 +18,9 @@ classifiers = [
     "Intended Audience :: Developers",
     "License :: OSI Approved :: MIT License",
     "Programming Language :: Python :: 3",
-    "Programming Language :: Python :: 3.9",
     "Programming Language :: Python :: 3.10",
     "Programming Language :: Python :: 3.11",
+    "Programming Language :: Python :: 3.12",
     "Topic :: Software Development :: Libraries :: Python Modules",
     "Topic :: Text Processing :: Markup",
 ]
@@ -28,6 +28,7 @@ classifiers = [
 dependencies = [
     "click>=8.0.0",
     "jsonschema>=4.0.0",
+    "mcp>=1.0.0",
     "pydantic>=2.0.0",
     "pyyaml>=6.0",
     "fastapi>=0.100.0",
@@ -37,6 +38,7 @@ dependencies = [
 [project.optional-dependencies]
 dev = [
     "pytest>=7.4.0",
+    "pytest-asyncio>=0.21.0",
     "pytest-cov>=4.1.0",
     "pytest-watch>=4.2.0",
     "ruff>=0.1.0",
@@ -55,6 +57,7 @@ where = ["src"]
 
 [project.scripts]
 yaml-diffs = "yaml_diffs.cli.main:main"
+yaml-diffs-mcp-server = "yaml_diffs.mcp_server.server:main"
 
 [tool.pytest.ini_options]
 testpaths = ["tests"]
@@ -70,6 +73,7 @@ markers = [
     "slow: marks tests as slow (deselect with '-m \"not slow\"')",
     "integration: marks tests as integration tests",
 ]
+asyncio_mode = "auto"
 
 [tool.coverage.run]
 source = ["src/yaml_diffs"]
