feat(distribution): prepare package for PyPI distribution (fixes #13) (#46)
* test(tests): Add comprehensive test suite (fixes #12) (#45)

* docs: organize documentation and create examples (fixes #10, fixes #11) (#44)

* docs: organize documentation and create examples (fixes #10, fixes #11)

- Reorganize documentation into hierarchical structure (user/, developer/, api/, operations/)
- Create comprehensive user documentation (getting_started, schema_reference, examples)
- Create developer documentation (architecture, contributing)
- Enhance README with comprehensive content and examples
- Add documentation maintenance guidelines to AGENTS.md
- Create example template and examples README
- Update all cross-references in documentation

Fixes #10 - Documentation
Fixes #11 - Example Documents & Templates

* fix: apply formatting fixes (end-of-file newlines)

* fix(docs): add missing ValidationError imports in code examples

- Add ValidationError import to getting_started.md example (comment #2563472108)
- Add ValidationError import to examples.md example (comment #2563472253)

This ensures code examples are complete and runnable.

Resolves review comments: #2563472108, #2563472253

* fix(docs): add missing ChangeType import in getting_started.md

- Add ChangeType import to Workflow 2 example (comment #2563484298)
- Ensures code example is complete and runnable

Resolves review comment: #2563484298

* Address additional PR review feedback

Applied the following changes based on second review:
- Fixed misleading test comment in test_load_very_large_document_10000_sections: Updated comment to accurately reflect actual section count calculation (50 top-level * 5 per level * 3 depth = ~1,550 sections) instead of incorrect (100 * 10 * 10 = 10,000+)
- Removed duplicate sample_uuid fixture from conftest.py: Consolidated duplicate fixtures as sample_id and sample_uuid were identical and sample_uuid was not used

Note: Type hints in validator.py were already fixed in previous c

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -22,21 +22,56 @@ jobs:
         with:
           python-version: "3.11"
 
+      - name: Validate pyproject.toml
+        run: |
+          # Check that pyproject.toml exists
+          if [ ! -f "pyproject.toml" ]; then
+            echo "❌ Error: pyproject.toml not found!"
+            exit 1
+          fi
+          # Validate TOML syntax (basic check)
+          python -c "import tomllib; f=open('pyproject.toml','rb'); tomllib.load(f); print('✅ pyproject.toml syntax valid')" || python -c "import tomli; f=open('pyproject.toml','rb'); tomli.load(f); print('✅ pyproject.toml syntax valid')" || echo "⚠️ Could not validate TOML syntax (this is OK if tomllib/tomli not available)"
+
       - name: Install build tools
         run: |
           python -m pip install --upgrade pip
           pip install build
 
       - name: Build package
+        timeout-minutes: 10
         run: |
           python -m build
 
       - name: Test package installation
+        timeout-minutes: 10
         run: |
+          # Install wheel (pip automatically installs dependencies from wheel metadata)
           pip install dist/yaml_diffs-*.whl
-          python -c "import yaml_diffs; print('Package installed successfully')"
-          python -c "from yaml_diffs import __version__; print(f'Package version: {__version__}')"
+          # Verify dependencies are installed (grep may not find all, that's OK)
+          echo "Installed packages:"
+          pip list | grep -E "(click|pydantic|pyyaml|fastapi|jsonschema|httpx|mcp|uvicorn)" || echo "Note: Some dependencies may not be listed above"
+          # Test basic import
+          python -c "import yaml_diffs; print('✅ Package installed successfully')"
+          python -c "from yaml_diffs import __version__; print(f'✅ Package version: {__version__}')"
           python -c "import yaml_diffs; assert hasattr(yaml_diffs, '__version__'), 'Package missing __version__ attribute'"
+
+      - name: Test CLI commands
+        timeout-minutes: 5
+        run: |
+          # Test CLI version command
+          yaml-diffs --version
+          # Test CLI help command
+          yaml-diffs --help
+
+      - name: Test library imports
+        timeout-minutes: 5
+        run: |
+          python -c "from yaml_diffs import (load_document, validate_document, diff_documents, format_diff, Document, Section, __version__); print('All main imports successful!'); print(f'Version: {__version__}')"
+
+      - name: Test schema file access
+        timeout-minutes: 5
+        run: |
+          python -c "from yaml_diffs.schema import load_schema; schema = load_schema(); assert schema is not None; assert 'version' in schema or 'info' in schema; print('Schema file accessible and loadable!')"
 
       - name: Upload build artifacts
         uses: actions/upload-artifact@v5
