--- a/pyproject.toml
+++ b/pyproject.toml
@@ -36,6 +36,12 @@ dependencies = [
     "uvicorn[standard]>=0.23.0",
 ]
 
+[project.urls]
+Homepage = "https://github.com/noamoss/yaml_diffs"
+Documentation = "https://github.com/noamoss/yaml_diffs/tree/main/docs"
+Repository = "https://github.com/noamoss/yaml_diffs"
+Issues = "https://github.com/noamoss/yaml_diffs/issues"
+
 [project.optional-dependencies]
 dev = [
     "pytest>=7.4.0",
@@ -51,9 +57,13 @@ dev = [
 
 [tool.setuptools]
 package-dir = {"" = "src"}
+include-package-data = true
 
 [tool.setuptools.packages.find]
 where = ["src"]
+
+[tool.setuptools.package-data]
+yaml_diffs = ["schema/*.yaml"]
 
 [project.scripts]
 yaml-diffs = "yaml_diffs.cli.main:main"
