--- a/nixpacks.toml
+++ b/nixpacks.toml
@@ -3,9 +3,9 @@ providers = ["python"]
 
 [phases.install]
 cmds = [
-  "pip install --upgrade pip",
-  "pip install -r requirements.txt",
-  "pip install -e ."
+  "python3 -m pip install --upgrade pip",
+  "python3 -m pip install -r requirements.txt",
+  "python3 -m pip install -e ."
 ]
 
 [start]
