fix(deployment): Use virtual environment for pip installation
When Python is installed via Nix, it's an externally-managed environment
and ensurepip cannot modify the immutable /nix/store filesystem.

Solution: Create a virtual environment and use pip from within it.
This is the standard approach for Nix-managed Python environments.

- Create venv at /opt/venv
- Activate venv and install dependencies
- Use venv's uvicorn for start command

Fixes 'externally-managed-environment' error during Railway build.

--- a/nixpacks.toml
+++ b/nixpacks.toml
@@ -3,11 +3,12 @@ providers = ["python"]
 
 [phases.install]
 cmds = [
-  "python3 -m ensurepip --upgrade",
-  "python3 -m pip install --upgrade pip",
-  "python3 -m pip install -r requirements.txt",
-  "python3 -m pip install -e ."
+  "python3 -m venv /opt/venv",
+  "source /opt/venv/bin/activate",
+  "pip install --upgrade pip",
+  "pip install -r requirements.txt",
+  "pip install -e ."
 ]
 
 [start]
-cmd = "uvicorn yaml_diffs.api_server.main:app --host 0.0.0.0 --port $PORT"
+cmd = "/opt/venv/bin/uvicorn yaml_diffs.api_server.main:app --host 0.0.0.0 --port $PORT"
