feat(schema): Make section IDs optional in input YAML
- Remove 'id' from required array in OpenSpec schema (legal_document_spec.yaml)
- Update schema descriptions to indicate IDs are optional and auto-generated
- Update tests to expect success for missing IDs instead of validation errors
- Add comprehensive tests for optional ID scenarios:
  - Loading documents without IDs (auto-generation)
  - Loading documents with explicit IDs (use provided)
  - Mixed scenarios (some with IDs, some without)
  - Diffing with auto-generated IDs
  - DiffResult.section_id and id_path population
- Update documentation:
  - schema_reference.md: Mark 'id' as optional
  - AGENTS.md: Update multiple sections about optional IDs
  - section.py: Update docstring to clarify optional nature
- Add example document without explicit IDs (minimal_document_no_ids.yaml)

Backward compatibility: Documents with explicit IDs continue to work unchanged.
DiffResult.section_id and id_path fields remain for future integrations.

Closes #51

--- a/src/yaml_diffs/schema/legal_document_spec.yaml
+++ b/src/yaml_diffs/schema/legal_document_spec.yaml
@@ -140,20 +140,22 @@ $defs:
     type: object
     description: |
       Recursive section definition. Sections can contain nested sections
-      to unlimited depth. Each section must have a stable ID and a marker
-      for diffing. Markers are the primary identifiers used for matching
-      sections across document versions.
+      to unlimited depth. Each section must have a marker for diffing.
+      Section IDs are optional and will be auto-generated if not provided.
+      Markers are the primary identifiers used for matching sections across
+      document versions.
     required:
-      - id
       - marker
       - sections
     properties:
       id:
         type: string
-        description: "Stable section identifier (required for tracking)"
-        # Pattern supports alphanumeric characters, hyphens, and underscores.
-        # This allows for UUIDs (e.g., "550e8400-e29b-41d4-a716-446655440000")
-        # as well as custom identifiers (e.g., "sec-1", "sec-1-a").
+        description: |
+          Optional stable section identifier. If not provided, a UUID will be
+          auto-generated. Used for tracking sections across document versions.
+          Pattern supports alphanumeric characters, hyphens, and underscores.
+          This allows for UUIDs (e.g., "550e8400-e29b-41d4-a716-446655440000")
+          as well as custom identifiers (e.g., "sec-1", "sec-1-a").
         pattern: "^[a-zA-Z0-9_-]+$"
         minLength: 1
         examples:
