feat(schema): Make document metadata fields optional and type free text
This PR implements issue #70 (Make document metadata fields optional) plus
additional bug fixes for generic YAML diffing and line number extraction.

## Schema Changes
- Make document metadata fields optional: id, title, type, language
- Make version and source objects optional
- Change type field from enum to free text string
- Update OpenSpec schema to mark fields as 'recommended' not 'required'

## Pydantic Model Updates
- Update Document, Version, Source models with optional fields (None defaults)
- Remove DocumentType enum, use str | None for type field
- Ensure backward compatibility with existing documents

## Bug Fixes (Generic Diffing)
- Fix: diff_node returning UNCHANGED for identical scalars caused false
  positives in 'if nested_changes:' check, incorrectly marking unchanged
  array items as changed
- Fix: Duplicate entries (ITEM_CHANGED + VALUE_CHANGED) for changed scalar
  array items - now only add ITEM_CHANGED wrapper for complex items
- Fix: Line number extraction for inline arrays - added fallback to return
  parent key's line number when exact array item can't be found

## UI Updates
- Update SchemaViewer to dynamically fetch schema from API
- Add /api/v1/schema endpoint for schema retrieval
- Update help text and examples to reflect optional fields
- Fix example YAML files to align with legal document schema structure

## Documentation
- Update schema_reference.md with optional field descriptions
- Update examples with comments indicating optional fields
- Add comprehensive diffing algorithms documentation

## Tests
- Add tests for optional metadata fields
- Add tests for free text type field
- Update existing tests to handle string type (was enum)
- 513 tests passing

Fixes #70

--- a/examples/template.yaml
+++ b/examples/template.yaml
@@ -1,36 +1,43 @@
 # Template for creating new legal documents in YAML format
 # Copy this file and replace placeholder values with your document information
 #
-# Required fields are marked with comments
-# Optional fields are shown with example values or left empty
+# Only 'sections' is required. All metadata fields are optional but recommended.
+# The core diffing functionality only requires the sections array.
 
 document:
-  # Required: Stable document identifier
+  # Optional (Recommended): Stable document identifier
+  # Enables stable document identification across systems and versions
   # Recommended formats: UUID or canonical ID (e.g., "law-1234")
   id: "your-document-id"
 
-  # Required: Document title in Hebrew
+  # Optional (Recommended): Document title for human readability
+  # Improves human readability and document organization
   title: "כותרת המסמך"
 
-  # Required: Document type
-  # Must be one of: law, regulation, directive, circular, policy, other
+  # Optional (Recommended): Document type classification
+  # Enables document categorization and filtering
+  # Accepts any string value (free text). Common examples: law, regulation, directive, circular, policy, other
   type: "law"
 
-  # Required: Document language (must be "hebrew")
+  # Optional (Recommended): Document language specification
+  # Specifies document language for proper rendering and processing
+  # Must be "hebrew" if provided
   language: "hebrew"
 
-  # Required: Version information
+  # Optional (Recommended): Version information
+  # Tracks document version history. Essential for version control
   version:
-    # Required: Version identifier or date (e.g., "2024-01-01" or "v1.0")
+    # Optional: Version identifier for tracking document versions
     number: "2024-01-01"
     # Optional: Version description
     description: "גרסה ראשונית"
 
-  # Required: Source information
+  # Optional (Recommended): Source information
+  # Provides provenance and attribution. Important for legal compliance
   source:
-    # Required: Original source URL (must be valid URI)
+    # Optional: Source URL for provenance and attribution
     url: "https://example.gov.il/your-document"
-    # Required: ISO 8601 timestamp when document was fetched
+    # Optional: Timestamp when document was retrieved
     fetched_at: "2025-01-20T09:50:00Z"
 
   # Required: Array of sections (can be empty array: [])
