--- a/examples/minimal_document.yaml
+++ b/examples/minimal_document.yaml
@@ -1,22 +1,20 @@
 # Minimal valid example document
-# Demonstrates the basic structure with all required fields
+# Demonstrates the truly minimal structure - only sections is required
+# All metadata fields (id, title, type, language, version, source) are optional
 
 document:
-  id: "law-1234"
-  title: "חוק הדוגמה לרגולציה"
-  type: "law"
-  language: "hebrew"
-  version:
-    number: "2024-01-01"
-  source:
-    url: "https://example.gov.il/law1234"
-    fetched_at: "2025-01-20T09:50:00Z"
-
+  # Only required field: sections array (can be empty)
   sections:
-    - id: "sec-1"
-      marker: "1"
-      title: "הגדרות"
+    - marker: "1"
       content: |
         בחוק זה—
         "מוסד" – גוף הפועל לפי הוראות החוק.
       sections: []
+
+# Note: The following metadata fields are optional but recommended:
+# - id: Stable document identifier (recommended for tracking)
+# - title: Document title (recommended for human readability)
+# - type: Document type (recommended for organization)
+# - language: Document language (recommended for multi-language support)
+# - version: Version information (recommended for version control)
+# - source: Source information (recommended for traceability)
