--- a/src/yaml_diffs/schema/legal_document_spec.yaml
+++ b/src/yaml_diffs/schema/legal_document_spec.yaml
@@ -23,17 +23,14 @@ properties:
   document:
     type: object
     required:
-      - id
-      - title
-      - type
-      - language
-      - version
-      - source
       - sections
     properties:
       id:
         type: string
-        description: "Stable document identifier (recommended: UUID or canonical ID)"
+        description: |
+          Stable document identifier for tracking and reference (recommended: UUID or canonical ID).
+          Enables stable document identification across systems and versions. Useful for database
+          storage, API references, and cross-referencing.
         minLength: 1
         examples:
           - "law-1234"
@@ -41,37 +38,45 @@ properties:
 
       title:
         type: string
-        description: "Document title in Hebrew"
+        description: |
+          Document title for human readability (recommended for documentation).
+          Improves human readability and document organization. Essential for UI display
+          and document management.
         minLength: 1
 
       type:
         type: string
-        description: "Type of legal document"
-        enum:
-          - law
-          - regulation
-          - directive
-          - circular
-          - policy
-          - other
+        description: |
+          Document type classification (recommended for organization and filtering).
+          Enables document categorization and filtering. Useful for organizing large
+          document collections. Accepts any string value (free text).
         examples:
           - "law"
           - "regulation"
+          - "directive"
+          - "circular"
+          - "policy"
+          - "other"
+          - "custom-type"
 
       language:
         type: string
-        description: "Document language (must be 'hebrew')"
+        description: |
+          Document language specification (recommended for multi-language support).
+          Specifies document language for proper rendering and processing. Important
+          for multi-language systems.
         const: "hebrew"
-        default: "hebrew"
 
       version:
-        type: object
-        required:
-          - number
+        type: ["object", "null"]
+        required: []
         properties:
           number:
             type: string
-            description: "Version identifier or date (e.g., '2024-11-01')"
+            description: |
+              Version identifier for tracking document versions (recommended for version control).
+              Tracks document version history. Essential for version control and change tracking
+              workflows.
             minLength: 1
             examples:
               - "2024-11-01"
@@ -82,21 +87,23 @@ properties:
         additionalProperties: false
 
       source:
-        type: object
-        required:
-          - url
-          - fetched_at
+        type: ["object", "null"]
+        required: []
         properties:
           url:
             type: string
-            description: "Original source URL"
+            description: |
+              Source URL for provenance and attribution (recommended for traceability).
+              Provides provenance and attribution. Important for legal compliance and audit trails.
             format: uri
             minLength: 1
             examples:
               - "https://example.gov.il/law1234"
           fetched_at:
             type: string
-            description: "ISO 8601 timestamp when document was fetched"
+            description: |
+              Timestamp when document was retrieved (recommended for audit trails).
+              Records when document was retrieved. Useful for cache invalidation and freshness checks.
             format: date-time
             examples:
               - "2025-01-20T09:50:00Z"
