feat(rebranding): Update domain to api-yamly.thepitz.studio and rebrand to yamly
- Update all domain references from api.yamly.thepitz.studio to api-yamly.thepitz.studio
- Replace hardcoded production URLs with environment variable references
- Update repository references from yaml_diffs to yamly
- Update branding from yaml-diffs to yamly throughout codebase
- Update UI metadata and component text
- Update all documentation with new domain and repository name
- Create .env.example with production values
- Update MCP server configuration and examples

Fixes #65

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -37,10 +37,10 @@ dependencies = [
 ]
 
 [project.urls]
-Homepage = "https://github.com/noamoss/yaml_diffs"
-Documentation = "https://github.com/noamoss/yaml_diffs/tree/main/docs"
-Repository = "https://github.com/noamoss/yaml_diffs"
-Issues = "https://github.com/noamoss/yaml_diffs/issues"
+Homepage = "https://github.com/noamoss/yamly"
+Documentation = "https://github.com/noamoss/yamly/tree/main/docs"
+Repository = "https://github.com/noamoss/yamly"
+Issues = "https://github.com/noamoss/yamly/issues"
 
 [project.optional-dependencies]
 dev = [
