fix(ci): Update GitHub Actions workflows for package rename to yamly
- Update test.yml: Change import from 'yaml_diffs' to 'yamly' and coverage path
- Update build.yml: Fix all package references, CLI commands, and import statements
- Update lint.yml: Change import from 'yaml_diffs' to 'yamly'

All workflows now use the new package name 'yamly' instead of 'yaml-diffs'/'yaml_diffs'.
This fixes CI/CD failures caused by incorrect package name references.

--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -55,7 +55,7 @@ jobs:
           # Use uv sync for better dependency resolution (includes dev dependencies)
           uv sync --extra dev
           # Verify installation
-          uv run python -c "import yaml_diffs; print('✅ Package installed successfully')"
+          uv run python -c "import yamly; print('✅ Package installed successfully')"
 
       - name: Run ruff check (linting)
         timeout-minutes: 5
