--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -91,7 +91,7 @@ jobs:
           uv pip list | head -20
           # Verify installation
           echo "Verifying package installation..."
-          uv run python -c "import yaml_diffs; print('✅ Package installed successfully')" || {
+          uv run python -c "import yamly; print('✅ Package installed successfully')" || {
             echo "❌ Package import failed!"
             echo "Python version:"
             python --version
@@ -109,7 +109,7 @@ jobs:
           echo "pytest version:"
           uv run pytest --version || echo "pytest not found"
           echo "Starting test run..."
-          uv run pytest --cov=src/yaml_diffs --cov-report=xml --cov-report=term --cov-report=term-missing -v || {
+          uv run pytest --cov=src/yamly --cov-report=xml --cov-report=term --cov-report=term-missing -v || {
             echo "❌ Tests failed on Python ${{ matrix.python-version }}!"
             echo "Python version:"
             uv run python --version
