fix(rebranding): Rename environment variables from YAML_DIFFS_* to YAMLY_*
Complete the rebranding by renaming all environment variables:
- YAML_DIFFS_API_URL → YAMLY_API_URL
- YAML_DIFFS_API_KEY → YAMLY_API_KEY
- YAML_DIFFS_API_TIMEOUT → YAMLY_API_TIMEOUT

**Source Code:**
- src/yamly/mcp_server/config.py: Updated env var names and error messages
- src/yamly/cli/commands.py: Updated help text and docstrings

**Documentation:**
- README.md: Updated all environment variable references
- docs/operations/environment_variables.md: Updated all examples and references
- docs/api/mcp_server.md: Updated configuration examples
- docs/api/api_server.md: Updated environment variable tables
- docs/operations/deployment.md: Updated deployment examples

**Examples & Scripts:**
- examples/diff_via_api.py: Updated env var usage and help text
- examples/mcp_client_config.json: Updated config example
- scripts/verify_railway_deployment.sh: Updated env var references
- .env.example: Updated environment variable names

**Tests:**
- tests/test_mcp_server.py: Updated test environment variable names

**Other:**
- .gitignore: Updated log file pattern from yaml-diffs-* to yamly-*
- Removed temporary commit_test_fixes.sh script

All tests pass. This completes the comprehensive rebranding from yaml-diffs/yaml_diffs to yamly throughout the entire codebase, including environment variables.

--- a/.env.example
+++ b/.env.example
@@ -51,13 +51,13 @@ LOG_LEVEL=INFO
 # Base URL for the yamly API
 # For local development: http://localhost:8000
 # For production: https://api-yamly.thepitz.studio
-YAML_DIFFS_API_URL=https://api-yamly.thepitz.studio
+YAMLY_API_URL=https://api-yamly.thepitz.studio
 
 # Optional API key for authentication (if implemented in the future)
-# YAML_DIFFS_API_KEY=
+# YAMLY_API_KEY=
 
 # Request timeout in seconds
-# YAML_DIFFS_API_TIMEOUT=30
+# YAMLY_API_TIMEOUT=30
 
 # ============================================================================
 # UI Configuration (Next.js)
