--- a/examples/mcp_client_config.json
+++ b/examples/mcp_client_config.json
@@ -4,7 +4,7 @@
       "command": "yamly-mcp-server",
       "args": [],
       "env": {
-        "YAML_DIFFS_API_URL": "http://localhost:8000"
+        "YAMLY_API_URL": "http://localhost:8000"
       }
     }
   }
