fix(ui): Update .env.example to use new API domain

--- a/ui/.env.example
+++ b/ui/.env.example
@@ -1,2 +1,2 @@
 # API URL for the Railway backend
-NEXT_PUBLIC_API_URL=https://yaml-diffs.up.railway.app
+NEXT_PUBLIC_API_URL=https://api-yamly.thepitz.studio
